Добавлен docker-compose.yml и Dockerfile для упаковки в docker контейнеры

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,13 @@
 spring.application.name=blog-platform
 
 #PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/blog_platform
-spring.datasource.username=postgres
-spring.datasource.password=admin
+#spring.datasource.url=jdbc:postgresql://localhost:5432/blog_platform
+#spring.datasource.username=postgres
+#spring.datasource.password=admin
+#PostgreSQL (переменные окружения для работы в Docker)
+spring.datasource.url=${SPRING_DATASOURCE_URL}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Hibernate
